--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "pretty": "prettier --write . --ignore-path .gitignore"
+        "pretty": "prettier --write . --ignore-path .gitignore",
+        "build:cloudflare": "next build && npx @cloudflare/next-on-pages@1"
     },
     "dependencies": {
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-navigation-menu": "^1.1.4",
         "@radix-ui/react-slot": "^1.0.2",
+        "@swc/helpers": "0.5.15",
         "@tailwindcss/typography": "^0.5.16",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.0",
+        "cookies-next": "^5.1.0",
         "lucide-react": "^0.487.0",
         "next": "^15.2.4",
         "next-themes": "^0.2.1",
