--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     },
     "devDependencies": {
         "@cloudflare/next-on-pages": "^1.8.3",
+        "@types/estree": "^1.0.7",
+        "@types/json-schema": "^7.0.15",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
